fix: mismatch of styles on tablet dimensions

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   margin: 51px 0 0 56px;
   max-width: 600px;
+  color: #1a1b22;
 }
 
 .about__title {
@@ -67,7 +68,11 @@
     max-width: 232px;
     width: 100%;
     height: 232px;
-    align-self: center;
+    margin-top: 21px;
+  }
+
+  .about__title {
+    font-size: 30px;
   }
 
   .about__text {
@@ -82,6 +87,11 @@
   .about {
     flex-direction: column;
     padding: 32px 24px 128px;
+  }
+
+  .about__image {
+    align-self: center;
+    margin: 0;
   }
 
   .about__text {
